--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="re_enter_password">Re-enter Password</string>
     <string name="create_account">Create Account</string>
     <string name="already_a_member_login">Already a member? Login</string>
+    <string name="delete_account">Delete Account</string>
+    <string name="dots">dots</string>
 </resources>
