--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="already_a_member_login">Already a member? Login</string>
     <string name="delete_account">Delete Account</string>
     <string name="dots">dots</string>
+    <string name="register">Register</string>
 </resources>
